--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,10 @@ body   {
     font-family: 'Montserrat', sans-serif;
 }
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: black;
-}
-
+/* Logo Styling */
 .logo   {
     font-size: 1.5rem;
-    margin: .8rem;
+    margin: .5rem;
 }
 
 .logo a {
@@ -26,3 +20,52 @@ body   {
     text-decoration: none;
 }
 
+/* Navbar Links Styling */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+}
+
+.navbar-links ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-links li    {
+    display: flex;
+}
+
+.navbar-links li a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    padding: 1rem;
+}
+
+.navbar-links li:hover  {
+    background-color: #2b2b2b;
+}
+
+/* Hamburger Styling */
+.hamburger  {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 30px;
+    height: 20px;
+    top: 1rem;
+    right: .5rem;
+}
+
+.hamburger .bar {
+    display: flex;
+    width: 100%;
+    height: 3px;
+    background-color: white;
+    border-radius: 50px;
+}
