--- a/css/styles.css
+++ b/css/styles.css
@@ -69,3 +69,18 @@ body   {
     background-color: white;
     border-radius: 50px;
 }
+
+.price-component    {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.price-card {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 8px 6px 20px #2b2b2b2e;
+}
