--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,12 @@ body   {
 
 /* Navbar Links Styling */
 .navbar {
+    position: fixed;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-color: black;
+    width: 100vw;
 }
 
 .navbar-links ul {
@@ -56,7 +58,7 @@ body   {
 /* Hamburger Styling */
 .hamburger  {
     position: absolute;
-    display: flex;
+    display: none;
     justify-content: space-between;
     flex-direction: column;
     width: 30px;
